# GarHal_CSGO

./: .gitmodules  CMakeLists.txt  README.md  install-driver.ps1  remove-driver.ps1
Common/: CMakeLists.txt  json.hpp
Common/bsp/: BSPStructure.hpp
Garhal/: CMakeLists.txt  communication.c  communication.h  garhal.c  hide.c  memory.c  ntos.h
GarhalController/: Aimbot.cpp  CMakeLists.txt  Engine.cpp  Entity.cpp  Entity.hpp  GarhalController.cpp  communications.hpp  csgo_settings.cpp  csgo_settings.hpp  data.hpp  kernelinterface.hpp  memory.hpp  netvar.cpp  netvar.h  netvars.h  netvars_gen.h  offsets.hpp  overlay.cpp  overlay.h  overlay_menu.cpp  overlay_menu.h  settings.json  vector.h
Libraries/common/: CMakeLists.txt
Libraries/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_extensions.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_truetype.h
cmake/: FindDirectX.cmake  FindImGui.cmake
